[gd_scene load_steps=40 format=2]

[ext_resource path="res://Characters/Enemies/BehaviorTree/Leaves/CheckPlayerVisibility/CheckPlayerVisible.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/States/Move.gd" type="Script" id=3]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/Sprites/Melee_Enemy_death.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enemies/BehaviorTree/Leaves/MoveTowards/MoveTowards.gd" type="Script" id=5]
[ext_resource path="res://Characters/Enemies/BehaviorTree/Leaves/FindPath/FindPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/Sprites/Melee_Enemy_attack.png" type="Texture" id=7]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/Sprites/Melee_Enemy.png" type="Texture" id=8]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/Sprite.gd" type="Script" id=9]
[ext_resource path="res://Scripts/BehaviorTree/Decorator/Invert.gd" type="Script" id=10]
[ext_resource path="res://Characters/Enemies/BehaviorTree/Leaves/EndReached.gd" type="Script" id=11]
[ext_resource path="res://Scripts/BehaviorTree/Decorator/AlwaysFail.gd" type="Script" id=12]
[ext_resource path="res://Scripts/BehaviorTree/Leaf/EmitSignal.gd" type="Script" id=14]
[ext_resource path="res://Scripts/BehaviorTree/Composite/Parallel.gd" type="Script" id=15]
[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=16]
[ext_resource path="res://Characters/Enemies/Body.gd" type="Script" id=17]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/States/Stagger.gd" type="Script" id=18]
[ext_resource path="res://Characters/Enemies/MeleeEnemy/States/Dying.gd" type="Script" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.8373
height = 38.2602

[sub_resource type="GDScript" id=2]
script/source = "extends CollisionShape2D

func _on_Dying_state_entered():
	queue_free()
"

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform bool flashing;
const float frequency = 2.5;

void fragment(){
	if (flashing){
		float sine = (sin(6.28318 * frequency * TIME) + 1.0) / 2.0;
		COLOR = texture(TEXTURE, UV);
		COLOR.r = sine * (1.0 - COLOR.r) + COLOR.r;
		COLOR.g = sine * (1.0 - COLOR.g) + COLOR.g;
		COLOR.b = sine * (1.0 - COLOR.b) + COLOR.b;
	}
	else {
		COLOR = texture(TEXTURE, UV);
	}
}
"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/flashing = false

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Telegraph",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Death",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[sub_resource type="GDScript" id=21]
script/source = "extends Area2D


func _on_Dying_state_entered():
	queue_free()
"

[sub_resource type="CapsuleShape2D" id=22]
radius = 14.1822
height = 38.4085

[node name="MeleeEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}
start_health = 30
damage = 5

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 16 )
DEBUG = false
acting_body_path = NodePath("..")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="ParallelSequence" type="Node" parent="StateMachine/Move"]
script = ExtResource( 15 )

[node name="Invert" type="Node" parent="StateMachine/Move/ParallelSequence"]
script = ExtResource( 10 )

[node name="AlwaysFail" type="Node" parent="StateMachine/Move/ParallelSequence/Invert"]
script = ExtResource( 12 )

[node name="CheckPlayerVisibility" parent="StateMachine/Move/ParallelSequence/Invert/AlwaysFail" instance=ExtResource( 2 )]

[node name="FindPath" parent="StateMachine/Move/ParallelSequence" instance=ExtResource( 6 )]

[node name="Invert2" type="Node" parent="StateMachine/Move/ParallelSequence"]
script = ExtResource( 10 )

[node name="EndReached" type="Node" parent="StateMachine/Move/ParallelSequence/Invert2"]
script = ExtResource( 11 )

[node name="EmitSignalMove" type="Node" parent="StateMachine/Move/ParallelSequence"]
script = ExtResource( 14 )

[node name="MoveTowards" type="Node" parent="StateMachine/Move/ParallelSequence"]
script = ExtResource( 5 )
speed = 300.0

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="Timer" type="Timer" parent="StateMachine/Dying"]
one_shot = true

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
scale = Vector2( 2, 2 )
frames = SubResource( 20 )
animation = "Idle"
playing = true
script = ExtResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = SubResource( 21 )

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 22 )
[connection signal="state_entered" from="StateMachine/Move" to="." method="_on_BehaviorTree_state_entered"]
[connection signal="signal_emitted" from="StateMachine/Move/ParallelSequence/EmitSignalMove" to="Sprite" method="_on_EmitSignalMove_signal_emitted"]
[connection signal="direction_changed" from="StateMachine/Move/ParallelSequence/MoveTowards" to="Sprite" method="_on_MoveTowards_direction_changed"]
[connection signal="finished" from="StateMachine/Stagger" to="Sprite" method="_on_Stagger_finished"]
[connection signal="state_entered" from="StateMachine/Stagger" to="Sprite" method="_on_Stagger_state_entered"]
[connection signal="state_entered" from="StateMachine/Stagger" to="." method="_on_Stagger_state_entered"]
[connection signal="state_entered" from="StateMachine/Dying" to="Hurtbox" method="_on_Dying_state_entered"]
[connection signal="state_entered" from="StateMachine/Dying" to="Sprite" method="_on_Dying_state_entered"]
[connection signal="state_entered" from="StateMachine/Dying" to="Sprite" method="_on_Stagger_finished"]
[connection signal="state_entered" from="StateMachine/Dying" to="." method="_on_Dying_state_entered"]
[connection signal="state_entered" from="StateMachine/Dying" to="Hitbox" method="_on_Dying_state_entered"]
[connection signal="timeout" from="StateMachine/Dying/Timer" to="StateMachine/Dying" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
